# viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
data/sql/: create.sql
data/tests/TestFolder/: sublime.json
src/: definitions.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.h
src/data/: i_serialize.h  record.cpp  record.h
src/database/: connection.cpp  connection.h  i_table.h  table.cpp  table.h  table_wrapper.cpp  table_wrapper.h
src/engine/: controller.cpp  controller.h  file_reader_thread.cpp  file_reader_thread.h  file_writer.cpp  file_writer.h  records_table_model.cpp  records_table_model.h
src/readers/: factory.cpp  factory.h  file_reader.h  i_file_reader.h  i_file_writer.h  json_file_reader.cpp  json_file_reader.h  json_file_writer.cpp  json_file_writer.h  reader_factory.cpp  reader_factory.h  xml_file_reader.cpp  xml_file_reader.h  xml_file_writer.cpp  xml_file_writer.h
src/widgets/: status_widget.cpp  status_widget.h
